new-khedma/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: castini-backend
  namespace: castini
  labels:
    app: castini-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: castini-backend
  template:
    metadata:
      labels:
        app: castini-backend
    spec:
      containers:
        - name: castini
          image: elyeshub/springboot:v3
          ports:
            - containerPort: 8089
