new-khedma/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: castini-backend-service
  namespace: castini
spec:
  selector:
    app: castini-backend
  ports:
    - protocol: TCP
      port: 8089       # Service port clients will use inside the cluster
      targetPort: 8089 # Port exposed by the container
  type: ClusterIP
  clusterIP: 10.103.221.210
