new-khedma/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: castini
spec:
  selector:
    app: mysql
  type: ClusterIP
  clusterIP: 10.104.22.59
  ports:
    - port: 3306
      targetPort: 3306
