new-khedma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: castini-frontend-ingress
  namespace: castini
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: castini.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: castini-frontend-service
                port:
                  number: 80
